// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Rendering test renders correctly 1`] = `
<DocumentFragment>
  <div
  class="MuiBox-root"
>
  <div>
    <div>
      <div
        class="MuiStack-root"
      />
      <div
        class="tk-table"
        style="height: 480px;"
      />
    </div>
  </div>
</div>
</DocumentFragment>
`;

exports[`Rendering test renders correctly with no valid visualizations 1`] = `
<DocumentFragment>
  <div>
  <span>
    previewGuide.impossibleToVisualize
  </span>
</div>
</DocumentFragment>
`;

exports[`Rendering test renders correctly with no valid visualizations or rejected visualizations 1`] = `
<DocumentFragment>
  <div>
  <span>
    previewGuide.tooSmallQuery
  </span>
</div>
</DocumentFragment>
`;
